<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/shareApp"
            android:icon="@drawable/share"
            android:title="@string/share" />
        <item
            android:id="@+id/rateUsNow"
            android:icon="@drawable/ic_star_24"
            android:title="@string/rate_us" />
        <item
            android:id="@+id/feedbackUs"
            android:icon="@drawable/icon_feedback"
            android:title="@string/feedback" />
        <item
            android:id="@+id/viewPrivacy"
            android:icon="@drawable/pp"
            android:title="@string/privacy_policy" />
        <item
            android:id="@+id/moreApps"
            android:icon="@drawable/moreapps"
            android:title="@string/more_apps" />

    </group>
</menu>